--- a/NOVA/Views/Satis/MusteriRaporuOzel.cshtml
+++ b/NOVA/Views/Satis/MusteriRaporuOzel.cshtml
@@ -359,10 +359,11 @@
 
                                 var r = users.filter(x => x.USER_NAME == data[i].PLASIYER);
                                 plasiyeridlist.push(r[0].USER_ID);
-
+                            
 
                         }
                     }
+                    
                     for (let i = 0; i < plasiyerlist.length; i++) {
 
                         var option = document.createElement("option");
@@ -592,9 +593,11 @@
 
             if (filterAlgorithm1.length > 0) {
                 $('#table2').bootstrapTable('filterBy', {
-                    KAYIT_YAPAN_KULLANICI_ID: parseInt(filterAlgorithm1)
+                    KAYIT_YAPAN_KULLANICI_ID: parseInt(filterAlgorithm1),
+                    GERCEKLESEN_TARIH:null
                 })
             } else {
+                
                 $('#table2').bootstrapTable('filterBy', {});
 
             }
