--- a/NOVA/Views/Satis/ZiyaretKaydiListesi.cshtml
+++ b/NOVA/Views/Satis/ZiyaretKaydiListesi.cshtml
@@ -1402,6 +1402,7 @@
                         ilce.appendChild(option);
 
                     }
+                    $("#ilceselect").val(null).trigger("change");
                 })
 
 
