--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -513,7 +513,7 @@
                     calendar.changeView('timeGridDay', info.dateStr);
                 },
                 eventDidMount: function (info) {
-                    if (info.event.extendedProps.description != null) {
+                    if (info.event.extendedProps.description != null && info.event.extendedProps.description !="" ) {
                         $(info.el).tooltip({
                             title: info.event.extendedProps.description,
                             placement: "top",
